New version of Swagger updates
